syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.app.grpc.stubs";

package reservation;

service ReservationGrpcService {
  rpc getAllReservations (GetAllReservationsRequest) returns (GetAllReservationsResponse) {}
  rpc getReservationById (GetReservationByIdRequest) returns (GetReservationByIdResponse) {}
  rpc saveReservation (SaveReservationRequest) returns (SaveReservationResponse) {}
  rpc deleteReservation (DeleteReservationRequest) returns (DeleteReservationResponse) {}
}

message Reservation {
  int64 id = 1;
  string customerName = 2;
  string description = 3;
  string checkIn = 4;
  string checkOut = 5;
}

message GetAllReservationsRequest {}

message GetAllReservationsResponse {
  repeated Reservation reservations = 1;
}

message GetReservationByIdRequest {
  int64 id = 1;
}

message GetReservationByIdResponse {
  Reservation reservation = 1;
}

message SaveReservationRequest {
  Reservation reservation = 1;
}

message SaveReservationResponse {
  Reservation reservation = 1;
}

message DeleteReservationRequest {
  int64 id = 1;
}

message DeleteReservationResponse {
  bool success = 1;
  string message = 2;
}